Bug 457146 - Search Results are messed if search text contains '\n'
Summary: Search Results are messed if search text contains '\n'
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: search (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-26 04:50 UTC by Waqar Ahmed
Modified: 2022-08-10 05:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Waqar Ahmed 2022-07-26 04:50:08 UTC
STEPS TO REPRODUCE
In Kate repo

1. Open Search & Replace Toolview, disable regex and match case
2. Type "\n" as text to search (without the quotes)
3. Perform a search

OBSERVED RESULT

Search results joins lines for some reason.


EXPECTED RESULT

Lines are not joined
Comment 1 Bug Janitor Service 2022-07-26 05:13:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/820
Comment 2 Waqar Ahmed 2022-08-10 05:41:02 UTC
Git commit e30d39f810cf7fd1674b90d234bc8e157c4b437e by Waqar Ahmed.
Committed on 10/08/2022 at 05:35.
Pushed by waqar into branch 'master'.

Search: Dont enable multiline search when regex mode is disabled

M  +1    -1    addons/search/SearchDiskFiles.cpp
M  +1    -1    addons/search/SearchOpenFiles.cpp
M  +2    -2    addons/search/SearchPlugin.cpp

https://invent.kde.org/utilities/kate/commit/e30d39f810cf7fd1674b90d234bc8e157c4b437e