Search: Dont enable multiline search when regex mode is disabled

BUG: 457146